Fixes breadcrumbs on mobilee

--- a/src/scss/spectre.scss
+++ b/src/scss/spectre.scss
@@ -3,12 +3,22 @@
 @import 'node_modules/spectre.css/src/spectre-icons.scss';
 @import 'node_modules/spectre.css/src/spectre-exp.scss';
 
-.mt-4 {
-  margin-top: 0.8rem;
+// marging bottom.
+.mb-4 {
+  margin-bottom: 0.8rem;
 }
 
-.pt-4 {
-  padding-top: 0.8rem;
+// padding bottom.
+.pb-4 {
+  padding-bottom: 0.8rem;
+}
+
+// padding right.
+.pr-1 {
+  padding-top: 0.2rem;
+}
+.pr-2 {
+  padding-top: 0.4rem;
 }
 
 .col-ml-neg-6 {
